work blue-green

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,12 +13,13 @@ http {
         '"$http_user_agent" "$http_x_forwarded_for"';
     access_log   logs/access.http.log  main;
     server {
-        listen          19006;
+        listen          9012;
         server_name     big.server.com;
         access_log      logs/access.server.log main;
 
         location / {
-          proxy_pass      http://localhost:19002;
+          #proxy_pass http://192.168.99.100:9005;
+          proxy_pass http://192.168.99.100:9005;
         }
     }
 }
