--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   nginx:
     image: nginx
     command: [nginx-debug, '-g', 'daemon off;']
-    network_mode: host
-    environment:
-      - NG_PORT=19002
-      - NG_HOST=localhost
+    ports:
+      - 9012:9012
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./logs/:/etc/nginx/logs/:rw
