--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,17 @@ http {
         '"$request" $body_bytes_sent "$http_referer" '
         '"$http_user_agent" "$http_x_forwarded_for"';
     access_log   logs/access.http.log  main;
+
+    server {
+            listen          9013;
+            server_name     big.server.com;
+            access_log      logs/access.server.log main;
+
+            location / {
+                  proxy_pass https://su22.ru;
+            }
+    }
+
     server {
         listen          9012;
         server_name     big.server.com;
