--- a/nginx.conf
+++ b/nginx.conf
@@ -24,13 +24,24 @@ http {
     }
 
     server {
-        listen          9012;
+        listen          80;
         server_name     big.server.com;
         access_log      logs/access.server.log main;
 
         location / {
-          #proxy_pass http://192.168.99.100:9005;
-          proxy_pass http://192.168.99.100:9005;
+          proxy_pass http://192.168.99.100:9020;
+          #proxy_pass http://localhost:9020;
         }
     }
+}
+
+stream {
+  upstream db {
+    server su22.ru:5432;
+  }
+
+  server {
+    listen 5432;
+    proxy_pass db;
+  }
 }
